# sparkling-duck

./: .gitignore  README.md  main.py  pyproject.toml  sparkling-duck.html  sparkling-duck.py
data/: movies.parquet
